<project name="javaforce" default="jar" basedir=".">
  <description>JavaForce SDK</description>
  <!-- set global properties for this build -->
  <property name="app" value="javaforce"/>
  <property name="apptype" value="c"/>
  <property name="src" location="src"/>
  <property name="build" location="classes"/>
  <property name="build-jnlp" location="classes-jnlp"/>
  <property name="home" value="."/>
  <property name="version" value="39.0"/>
  <property name="noelf" value="true"/>

  <property name="debian.depends" value="default-jre-headless    , jfsch, jfzlib, jfcifs, libv4l-0 , desktop-file-utils, libxcursor1"/>
  <property name="fedora.depends" value="java-17-openjdk-headless, jfsch, jfzlib, jfcifs, libv4l   , desktop-file-utils"/>
  <property name="arch.depends"   value="jre-openjdk-headless    , jfsch, jfzlib, jfcifs, v4l-utils, desktop-file-utils"/>

  <property environment="env"/>

  <import file="base.xml"/>

  <!-- get native dependancies -->

  <available property="have-glfw" file="native/glfw/src/window.c"/>
  <target name="get-glfw" unless="have-glfw" description="download glfw">
    <exec command="git clone https://github.com/glfw/glfw.git native/glfw"/>
    <exec command="git checkout tags/3.3.1" dir="native/glfw"/>
  </target>

  <available property="have-stb" file="native/stb/stb_truetype.h"/>
  <target name="get-stb" unless="have-stb" description="download stb">
    <exec command="git clone https://github.com/nothings/stb.git native/stb"/>
  </target>

  <target name="ffmpeg-win64" description="download ffmpeg for Win64">
    <echo message="Downloading: jfcodecs-win64.zip"/>
    <get src="http://javaforce.sourceforge.net/jfcodecs-win64.zip" dest="jfcodecs-win64.zip"/>
    <mkdir dir="ffmpeg"/>
    <unzip src="jfcodecs-win64.zip" dest="ffmpeg"/>
  </target>

  <target name="ffmpeg-mac64" description="download ffmpeg for mac64">
    <echo message="Downloading: jfcodecs-mac64.zip"/>
    <get src="http://javaforce.sourceforge.net/jfcodecs-mac64.zip" dest="jfcodecs-mac64.zip"/>
    <mkdir dir="ffmpeg"/>
    <unzip src="jfcodecs-mac64.zip" dest="ffmpeg"/>
  </target>

  <!-- get java dependancies -->

  <available property="have-twelvemonkeys-common-lang" file="jars/common-lang-${twelvemonkeys-version}.jar"/>
  <target name="get-twelvemonkeys-common-lang" unless="have-twelvemonkeys-common-lang">
    <maven name="common-lang" path="com/twelvemonkeys/common" version="${twelvemonkeys-version}"/>
  </target>

  <available property="have-twelvemonkeys-common-io" file="jars/common-io-${twelvemonkeys-version}.jar"/>
  <target name="get-twelvemonkeys-common-io" unless="have-twelvemonkeys-common-io">
    <maven name="common-io" path="com/twelvemonkeys/common" version="${twelvemonkeys-version}"/>
  </target>

  <available property="have-twelvemonkeys-common-image" file="jars/common-image-${twelvemonkeys-version}.jar"/>
  <target name="get-twelvemonkeys-common-image" unless="have-twelvemonkeys-common-image">
    <maven name="common-image" path="com/twelvemonkeys/common" version="${twelvemonkeys-version}"/>
  </target>

  <available property="have-twelvemonkeys-imageio-core" file="jars/imageio-core-${twelvemonkeys-version}.jar"/>
  <target name="get-twelvemonkeys-imageio-core" unless="have-twelvemonkeys-imageio-core">
    <maven name="imageio-core" path="com/twelvemonkeys/imageio" version="${twelvemonkeys-version}"/>
  </target>

  <available property="have-twelvemonkeys-imageio-metadata" file="jars/imageio-metadata-${twelvemonkeys-version}.jar"/>
  <target name="get-twelvemonkeys-imageio-metadata" unless="have-twelvemonkeys-imageio-metadata">
    <maven name="imageio-metadata" path="com/twelvemonkeys/imageio" version="${twelvemonkeys-version}"/>
  </target>

  <available property="have-twelvemonkeys-imageio-tiff" file="jars/imageio-tiff-${twelvemonkeys-version}.jar"/>
  <target name="get-twelvemonkeys-imageio-tiff" unless="have-twelvemonkeys-imageio-tiff">
    <maven name="imageio-tiff" path="com/twelvemonkeys/imageio" version="${twelvemonkeys-version}"/>
  </target>

  <available property="have-bfg" file="jars/bfg-${bfg-version}.jar"/>
  <target name="get-bfg" unless="have-bfg">
    <maven name="bfg" path="com/madgag" version="${bfg-version}"/>
  </target>

  <available property="have-derby" file="jars/derby-${derby-version}.jar"/>
  <target name="get-derby" unless="have-derby">
    <maven name="derby" path="org/apache/derby" version="${derby-version}"/>
  </target>

  <available property="have-jtds" file="jars/jtds-${jtds-version}.jar"/>
  <target name="get-jtds" unless="have-jtds">
    <maven name="jtds" path="net/sourceforge/jtds" version="${jtds-version}"/>
  </target>

  <available property="have-jsch" file="jars/jsch-${jsch-version}.jar"/>
  <target name="get-jsch" unless="have-jsch">
    <maven name="jsch" path="com/jcraft" version="${jsch-version}"/>
  </target>

  <available property="have-jzlib" file="jars/jzlib-${jzlib-version}.jar"/>
  <target name="get-jzlib" unless="have-jzlib">
    <maven name="jzlib" path="com/jcraft" version="${jzlib-version}"/>
  </target>

  <available property="have-jcifs" file="jars/jcifs-${jcifs-version}.jar"/>
  <target name="get-jcifs" unless="have-jcifs">
    <maven name="jcifs" path="org/samba/jcifs" version="${jcifs-version}" repo="https://repo.opennms.org/maven2"/>
  </target>

  <available property="have-mssql-jdbc" file="jars/mssql-jdbc-${mssql-jdbc-version}.jar"/>
  <target name="get-mssql-jdbc" unless="have-mssql-jdbc">
    <maven name="mssql-jdbc" path="com/microsoft/sqlserver" version="${mssql-jdbc-version}"/>
  </target>

  <available property="have-mysql-connector-j" file="jars/mysql-connector-j-${mysql-connector-j-version}.jar"/>
  <target name="get-mysql-connector-j" unless="have-mysql-connector-j">
    <maven name="mysql-connector-j" path="com/mysql" version="${mysql-connector-j-version}"/>
  </target>

  <target name="depjars" depends="depnatives,get-glfw,get-stb,get-twelvemonkeys-common-lang,get-twelvemonkeys-common-io,get-twelvemonkeys-common-image,get-twelvemonkeys-imageio-core,get-twelvemonkeys-imageio-metadata,get-twelvemonkeys-imageio-tiff,get-derby,get-jtds,get-jsch,get-jzlib,get-jcifs,get-mssql-jdbc,get-mysql-connector-j">
  </target>

  <target name="compile" depends="depjars" description="compile the source">
    <!-- Compile the java code from ${src} into ${build} -->
    <mkdir dir="${build}"/>
    <javac srcdir="${src}" destdir="${build}" target="${jdkver}" source="${jdkver}" debug="true" includeantruntime="false" nativeheaderdir="native/headers">
      <classpath>
        <fileset dir="jars" includes="*.jar"/>
      </classpath>
    </javac>
  </target>

  <target name="jar" depends="depjars,compile" description="build jar file">
    <!-- Build jar file from class files -->
    <jar destfile="jars/javaforce.jar" includes="**/*.class" basedir="${build}">
      <fileset dir="${src}">
        <include name="**/*.png"/>
        <include name="**/*.html"/>
        <include name="**/*.js"/>
        <include name="**/*.css"/>
        <include name="**/*.ttf"/>
      </fileset>
      <fileset dir="${java.home}/lib">
        <include name="*.bfc"/>
      </fileset>
    </jar>
    <copy file="jars/javaforce.jar" todir="."/>
  </target>

  <target name="compile-jnlp" description="compile the source">
    <!-- Compile the java code from ${src} into ${build-jnlp} -->
    <mkdir dir="${build-jnlp}"/>
    <javac srcdir="${src}" destdir="${build-jnlp}" target="1.8" source="1.8" debug="true" includeantruntime="false">
      <include name="javaforce/JF.java"/>
      <include name="javaforce/HTTP.java"/>
      <include name="javaforce/HTTPS.java"/>
      <include name="javaforce/XML.java"/>
      <include name="javaforce/utils/JNLP.java"/>
    </javac>
  </target>

  <target name="jnlp" depends="compile-jnlp" description="build jnlp jar file">
    <!-- build jnlp jar file from class files -->
    <jar destfile="jars/jnlp.jar" includes="**/*.class" basedir="${build-jnlp}">
      <manifest>
        <attribute name="Main-Class" value="javaforce.utils.JNLP"/>
      </manifest>
    </jar>
    <copy file="jars/jnlp.jar" todir="."/>
  </target>

  <target name="repo" description="download repo files">
    <exec command="git clone https://github.com/pquiring/repo"/>
  </target>

  <target name="javadoc" description="generate java documentation">
    <javadoc sourcepath="src" destdir="javadoc">
      <classpath>
        <fileset dir="jars" includes="*.jar"/>
      </classpath>
    </javadoc>
  </target>

  <!-- sudo ant install -->
  <target name="install" description="install files">
    <copy file="jars/javaforce.jar" todir="/usr/share/java"/>
    <copy file="jars/bouncycastle.jar" todir="/usr/share/java"/>
    <copy file="jars/filters.jar" todir="/usr/share/java"/>

    <copy file="lnxbin/jbus-call" todir="/usr/bin"/>
    <chmod file="/usr/bin/jbus-call" perm="+x"/>
    <copy file="lnxbin/jbus-client" todir="/usr/bin"/>
    <chmod file="/usr/bin/jbus-client" perm="+x"/>

    <ant antfile="build-jfpty.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfsudo.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfsudo-ask.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfopen.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-filesplitter.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-imageconvert.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-findreplace.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-pngalpha.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jf-update-desktop-database.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfsmbget.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfservice.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jf-monitor-dir.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-web.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfcp.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfmv.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfrm.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfver.xml" target="installapp" inheritAll="false"/>
    <ant antfile="build-jfresmgr.xml" target="installapp" inheritAll="false"/>
  </target>

  <target name="utils" depends="jar" description="build exe for utils 64bit">
    <ant antfile="build-copypath.xml" inheritAll="false"/>
    <ant antfile="build-findreplace.xml" inheritAll="false"/>
    <ant antfile="build-filesplitter.xml" inheritAll="false"/>
    <ant antfile="build-imageconvert.xml" inheritAll="false"/>
    <ant antfile="build-pngalpha.xml" inheritAll="false"/>
    <ant antfile="build-scriptex.xml" inheritAll="false"/>
    <ant antfile="build-web.xml" inheritAll="false"/>
    <ant antfile="build-vss.xml" inheritAll="false"/>
    <zip destfile="jfUtilities-${version}.zip">
      <fileset dir=".">
        <include name="*.exe"/>
        <include name="*.dll"/>
      </fileset>
      <fileset dir="jre_base/bin">
        <include name="*.dll"/>
      </fileset>
    </zip>
  </target>

  <target name="jre-base-desktop" description="build JRE for bundled JRE builds with desktop (swing) support">
    <exec command="jlink --module-path ${java.home}/jmods --add-modules java.base,java.desktop,java.sql,jdk.crypto.ec,jdk.crypto.cryptoki,java.security.jgss --output jre_base_desktop"/>
    <delete>
      <fileset dir="jre_base_desktop/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base_desktop/include"/>
    <delete dir="jre_base_desktop/legal"/>
  </target>

  <target name="jre-base" description="build JRE for bundled JRE builds with only base">
    <exec command="jlink --module-path ${java.home}/jmods --add-modules java.base,java.sql,jdk.crypto.ec,jdk.crypto.cryptoki,java.security.jgss --output jre_base"/>
    <delete>
      <fileset dir="jre_base/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base/include"/>
    <delete dir="jre_base/legal"/>
  </target>

  <target name="jre-base-javac" description="build JRE for bundled JRE builds with base and Java compiler">
    <exec command="jlink --module-path ${java.home}/jmods --add-modules java.base,java.sql,jdk.compiler,jdk.jartool,jdk.zipfs,jdk.crypto.ec,jdk.crypto.cryptoki,java.security.jgss --output jre_base_javac"/>
    <delete>
      <fileset dir="jre_base_javac/bin" includes="java**.exe"/>
    </delete>
    <delete dir="jre_base_javac/include"/>
    <delete dir="jre_base_javac/legal"/>
  </target>

  <target name="clean" description="deletes compiled files">
    <delete>
      <fileset dir="classes" includes="**/*.class"/>
      <fileset dir="jars" includes="javaforce.jar"/>
    </delete>
  </target>
</project>
